libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-struct-path.jsonc
//@ run: fail
//@ description: path values that aren't identifiers should fail
[
  "::kernel::special_form::use",
  "::math",
  {
    "#struct": {
      "x": "::math::sub"
      //~^ ERROR Use a simple identifier here
    }
  },
  "x"
]
